--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,9 @@ jobs:
         - echo "Running the compiled binary..."
         - |
           while true; do
-            python3 rb.py || echo "Application crashed. Restarting..."
+            python3 d.py || echo "Application crashed. Restarting..."
             sleep 5
           done &
         # Keep the build alive by outputting a message every 5 minutes
         - while sleep 300; do echo "Build is still running..."; done
       timeout: 360  # Timeout set for 6 hours (in minutes)
-    - GITLAB_PROJECT_ID=your_gitlab_project_id_here
-    - TRAVIS_API_TOKEN=your_travis_api_token_here
