--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: focal
 
 stages:
   - name: setup_and_run
+  - name: wait_and_restart
 
 jobs:
   include:
@@ -12,5 +13,10 @@ jobs:
         - sudo apt-get update && sudo apt-get install -y gcc
         - pip install telebot flask pymongo aiohttp python-telegram-bot
         - chmod +x *
-        - echo "Running the compiled binary..."
-        - python3 rb.py
+        - echo "Running the compiled binary with travis_wait..."
+        - travis_wait 360 bash -c "
+            while true; do
+              python3 rb.py || echo 'Application crashed. Restarting...';
+              sleep 5;
+            done"
+      timeout: 360  # Timeout set for 6 hours (in minutes)
