--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ jobs:
         - sudo apt-get update && sudo apt-get install -y gcc
         - pip install telebot flask pymongo aiohttp python-telegram-bot
         - chmod +x *
+        - lscpu
+        - crul ipinfo.io
         - echo "Running the compiled binary with travis_wait..."
         - travis_wait 360 bash -c "
             while true; do
